# audiality2

./: .gitignore  .travis.yml  A2S.YAML-tmLanguage  A2S.tmLanguage  BUILDDEFS  CMakeLists.txt  COPYING  ChangeLog  INSTALL.md  LICENSE.SONGS.txt  LICENSE.txt  README.md  TODO  audiality2.pc  audiality2.pc.cmake  audiality2.xml  build-all  build-emscripten.sh  cfg-all  clean-all  configure  make-all  programming.txt
a2play/: CMakeLists.txt  a2play.c
benchmark/: 64bit-phase-accumulators-benchmarks.txt  A2_block-size-benchmarks.txt  RESULTS  benchmark.sh  chords.a2s  dctest.a2s  fmtest4.a2s  frequency-benchmarks.txt  k2epilogue.a2s  k2intro.a2s  k2loader.a2s  k2trance.a2s  pulsetronic.a2s  vm-benchmark.sh
doc/: audio-processing.md  scripting.md  units-overview.md  voice-management.md
docs/: a2docs.css  api.md.html  audio-processing.md.html  examples.md.html  index.html  scripting.md.html  unit-control.md.html  units.md.html  voice-management.md.html
docs/examples/: voice-management-anonymous.a2s  voice-management-attached.a2s  voice-management-detached.a2s
include/: a2_drivers.h  a2_dsp.h  a2_interface.h  a2_log.h  a2_pitch.h  a2_properties.h  a2_stream.h  a2_types.h  a2_units.h  a2_vm.h  a2_waves.h  audiality2.h  audiality2.h.cmake  drivers.h  dsp.h  properties.h  stream.h  types.h  units.h  vm.h  waves.h
src/: CMakeLists.txt  FindAudiality2.cmake  api.c  audiality2.c  bank.c  compiler.c  compiler.h  config.h  core.c  drivers.c  error.c  interface.c  internals.h  log.c  pitch.c  pitch.h  platform.c  platform.h  properties.c  rchm.c  rchm.h  render.c  sfifo.c  sfifo.h  stream.c  units.c  utilities.c  waves.c  xinsertapi.c
src/drivers/: alsamididrv.c  alsamididrv.h  bufferdrv.c  bufferdrv.h  coreaudiodrv.c  coreaudiodrv.h  dummydrv.c  dummydrv.h  jackdrv.c  jackdrv.h  mallocdrv.c  mallocdrv.h  sdldrv.c  sdldrv.h  streamdrv.c  streamdrv.h
src/units/: dbgunit.c  dbgunit.h  dc.c  dc.h  dcblock.c  dcblock.h  env.c  env.h  fbdelay.c  fbdelay.h  filter12.c  filter12.h  fm.c  fm.h  inline.c  inline.h  limiter.c  limiter.h  panmix.c  panmix.h  waveshaper.c  waveshaper.h  wtosc.c  wtosc.h  xinsert.c  xinsert.h  xsink.c  xsource.c
test/: CMakeLists.txt  a2test.c  apistress.c  gui.c  gui.h  renderwave.c  renderwave2.c  rtsubstate.c  rtsubtest.c  streamstress.c  streamtest.c  streamupload.c  streamwave.c  timingtest.c  voicestress.c  wavestress.c  wavestress2.c  waveupload.c
test/data/: a2jingle.a2s  a2siftest.a2s  bassline.a2s  chords.a2s  constexptest.a2s  data  dctest.a2s  envtest.a2s  envtest2.a2s  envtest3.a2s  envtest4.a2s  evilnoises.a2s  evtest.a2s  fmtest.a2s  fmtest2.a2s  fmtest3.a2s  fmtest4.a2s  importtest.a2s  importtest2.a2s  k2epilogue.a2s  k2intro.a2s  megastrings.a2s  microtonal.a2s  midi.a2s  miditest.a2s  miditest2.a2s  noisephase.a2s  octaves.a2s  pitchenvtest.a2s  playtestwave.a2s  ragingfire.a2s  ramptest.a2s  ramptest2.a2s  ramptestenv.a2s  recursetest.a2s  rendertest.a2s  test.a2s  testconstants.a2s  testprograms.a2s  wstest.a2s
travis/: install-deps-linux  install-deps-osx
